Update file refs in index.html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel = "stylesheet" type="text/css" href = "assets/calculator.css">
-        <script type = "text/javascript" src = "assets/angular.min.js"></script>
-        <script type = "text/javascript" src = "assets/calculator.js"></script>
+        <link rel = "stylesheet" type="text/css" href = "calculator.css">
+        <script type = "text/javascript" src = "angular.min.js"></script>
+        <script type = "text/javascript" src = "calculator.js"></script>
         <title>drinkwater</title>
 	</head>
     
